third_party/move/move-compiler-v2/tests/visibility-checker/package_visibility_diff_addr.exp

Diagnostics:
error: package function `0x42::A::bar` cannot be called from a different address
   ┌─ tests/visibility-checker/package_visibility_diff_addr.move:3:25
   │
 3 │     public(package) fun bar() {}
   │                         ^^^ called from function `0x43::B::foo`
   ·
10 │         A::bar()
   │         -------- called here

error: package function `0x42::A::bar` cannot be called from a different address
   ┌─ tests/visibility-checker/package_visibility_diff_addr.move:3:25
   │
 3 │     public(package) fun bar() {}
   │                         ^^^ called from function `0x43::B::bar`
   ·
14 │         A::bar()
   │         -------- called here

error: package function `0x42::A::bar` cannot be called from a different address
   ┌─ tests/visibility-checker/package_visibility_diff_addr.move:3:25
   │
 3 │     public(package) fun bar() {}
   │                         ^^^ called from function `0x43::B::baz`
   ·
18 │         A::bar()
   │         -------- called here
